assets/css/styles.css
/* ... */
.service__cta-wrap {
    margin-top: 45px;
    display: flex;
    justify-content: center;
}
.service__cta {
    min-width: 214px;
    color: #ff5b2e;
    border-color: #ff5b2e;
}

/* Staff */
.staff {
    margin-top: 130px;
    background: #fffaf5;
}
.staff__top {
    text-align: center;
}
.staff__heading {
    margin-top: 15px;
}
.staff__desc {
    color: #5e6085;
    font-family: Sora, sans-serif;
    font-size: 1.6rem;
    font-weight: 600;
    line-height: 1;
}

.staff__list {
    margin-top: 45px;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 35px;
    align-items: center;
}
.staff-item {
    text-align: center;
}
.staff-item__img-wrap {
    margin: 0 16px;
    position: relative;
    border-radius: 130px;
}
.staff-item__img {
    width: 100%;
    height: 100%;
    display: block;
    position: relative;
    z-index: 1;
    border-radius: inherit;
}
.staff-item__img-wrap::before {
    content: "";
    left: 0;
    bottom: 0;
    position: absolute;
    width: 100%;
    height: 94%;
    border-radius: inherit;
    background: linear-gradient(180deg, #90ccff 0%, #59a8eb 95.96%);
}
.staff-item:nth-child(2) .staff-item__img-wrap::before {
    background: linear-gradient(180deg, #ff997e 0%, #f3752e 100%);
}
.staff-item:nth-child(3) .staff-item__img-wrap::before {
    background: linear-gradient(180deg, #fabf3e 0%, #ffa14a 100%);
}
.staff-item:nth-child(4) .staff-item__img-wrap::before {
    background: linear-gradient(180deg, #5bd6e2 0%, #00a7cc 100%);
}
.staff-item:nth-child(1) .staff-item__img-wrap::after {
    background-image: url(../img/staff-decor-01.svg);
}
.staff-item:nth-child(3) .staff-item__img-wrap::after {
    background-image: url(../img/staff-decor-03.svg);
}
.staff-item:nth-child(2) .staff-item__img-wrap::after {
    background-image: url(../img/staff-decor-02.svg);
}
.staff-item:nth-child(4) .staff-item__img-wrap::after {
    background-image: url(../img/staff-decor-04.svg);
}
.staff-item:nth-child(even) .staff-item__img-wrap::after {
    /* bottom: initial; /* Hủy bỏ bottom :0;*/
    /* top: 7px; */
    background-position: 0 16px;
}
.staff-item__img-wrap::after {
    content: "";
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 0;
    height: 100%;
    width: calc(100% + 36px);
    background-repeat: no-repeat;
    background-position: bottom;
    background-size: 100%;
}

.staff-item__title {
    margin-top: 29px;
    color: var(--color-primary-item);
    font-size: 1.4rem;
    font-weight: 400;
    line-height: 1;
}
.staff-item__name {
    margin-top: 14px;
    color: var(--color-primary-title);
    font-family: Sora, sans-serif;
    font-size: 2.2rem;
    font-weight: 600;
    line-height: 1; /* 100% */
}
.staff__cta-wrap {
    margin-top: 48px;
    display: flex;
    justify-content: center;
}
.staff__btn {
    min-width: 193px;
    color: #ff5b2e;
    border-color: #ff5b2e;
}

/* Pricing */
.pricing {
    padding: 86px 0;
    background: #fff6ed;
}
.pricing__top {
    text-align: center;
}
.pricing__desc {
    margin: 0 auto;
    width: 709px;
}
.pricing__switch-inner {
    user-select: none;
    position: relative;
}
.pricing__switch-inner::after {
    position: absolute;
    content: url(../img/pricing-decor-01.svg);
    top: -18px;
    right: -105px;
}
.pricing__switch-wrap {
    margin-top: 38px;
    display: flex;
    align-items: center;
    flex-direction: column;
}
.pricing__switch-label {
    cursor: pointer;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 276px;
    height: 56px;
    border-radius: 99px;
    border: 1px solid #ff5b2e99;
    padding: 0 40px;
}
.pricing__switch-label::before {
    content: "";
    width: 140px;
    height: 100%;
    background: #ff5b2e;
    border-radius: inherit;
    position: absolute;
    left: 0;
    top: 0;
    transition: all 2s;
}
.pricing__switch-value {
    z-index: 1;
    color: #fff;
}
.pricing__switch-input:checked + .pricing__switch-label::before {
    left: auto;
    right: 0;
    width: 131px;
}
.pricing__switch-input:not(:checked)
    + .pricing__switch-label
    .pricing__switch-value:nth-of-type(2),
.pricing__switch-input:checked
    + .pricing__switch-label
    .pricing__switch-value:nth-of-type(1) {
    color: #ff5b2e;
}

.pricing__list {
    margin-top: 56px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 44px;
}

.pracing-item {
    border-radius: 20px;
    padding: 30px 28px;
    background: #fff;
    width: 302px;
    height: 465px;
}
.pracing-item__type {
    color: #ff5b2e;
    font-size: 1.2rem;
    font-weight: 400;
    line-height: 1;
}
.pracing-item__heading {
    margin-top: 8px;
}
.pracing-item__price {
    margin-top: 24px;
    color: var(--color-primary-title);
    font-family: Sora, sans-serif;
    font-size: 3.3rem;
    font-weight: 700;
    line-height: 1.03;
}
.pracing-item__list {
    margin-top: 24px;
}
.pracing-item__item {
    color: var(--color-primary-item);
    display: flex;
    font-size: 1.4rem;
    font-weight: 400;
    line-height: 1;
    box-shadow: 0px 20px 44px 0px rgba(195, 108, 22, 0.06);
}
.pracing-item__item::before {
    content: url(../icons/pracing-check.svg);
    margin-right: 14px;
}
.pracing-item__item + .pracing-item__item {
    margin-top: 18px;
}
.pracing-item__btn {
    margin-top: 22px;
    cursor: pointer;
    width: 246px;
    color: #ff5b2e;
    background: #fff;
    border-radius: 99px;
    height: 44px;
    border: 1px solid rgba(255, 91, 46, 0.6);
}
.pracing-item__btn:hover {
    background: #ff5b2e;
    color: #ffffff;
}

/* Review */
.review {
    background: #fffaf5;
    padding: 53px 0;
    margin-bottom: 77px;
}
.review__inner {
    display: flex;
    justify-content: space-between;
    align-items: center;
    column-gap: 44px;
}
.review__list {
    display: flex;
}
.review__content {
    margin: 0 auto;
    overflow: hidden;
}
/* ... */

